Исправлена структура каталогов и папок

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Game Of Life</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <div id="root"></div>
+
+  <script src="js/game.js"></script>
 </body>
 </html>
