Добавлены вспомогательные функции

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="root"></div>
 
+  <script src="js/util.js"></script>
   <script src="js/cell.js"></script>
   <script src="js/grid.js"></script>
   <script src="js/game.js"></script>
